--- a/car_showroom/cars_project/static/cars_project/style.css
+++ b/car_showroom/cars_project/static/cars_project/style.css
@@ -3,6 +3,6 @@ li a {
 }
 
 body {
-    background: white url('images/background.jpg');
+    background: white url('images/background.jpeg');
     background-size: 100%;
 }
