--- a/car_showroom/cars_project/templates/cars_project/index.html
+++ b/car_showroom/cars_project/templates/cars_project/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
      <meta charset="utf-8">
-    <title>Списочек моих ненаглядных машинок</title>
+    <title>Car list index</title>
 </head>
 {% load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static 'cars_project/style.css' %}" />
 <body>
     <table border="2">
-        <caption>Сам список</caption>
+        <caption>Car list table</caption>
         <tr>
             <th>UID</th>
             <th>BRAND</th>
