--- a/car_showroom/cars_project/static/cars_project/style.css
+++ b/car_showroom/cars_project/static/cars_project/style.css
@@ -8,6 +8,26 @@ div.empty-db-message {
     text-align: center;
 }
 
+div.regform {
+    width: 100%;
+    height: 100%;
+    right: 5px;
+    padding: 1px;
+    margin-top: -35px;
+}
+
+div.formline {
+    display: inline;
+    height: 100%;
+    text-align: right;
+    margin-top: -20px;
+}
+
+.main div {
+   display: block;
+/*   border: 1px solid black; */
+}
+
 font.error-style {
     color: red;
     font-size: 22px;
@@ -17,6 +37,7 @@ font.error-style {
 
 html, body
 {
+    min-width:980px;
     margin: 40px;
     height: 90%;
 }
@@ -30,7 +51,15 @@ body
 
 /*--------------------*/
 
-#login
+
+#register
+{
+    height: 630px;
+    top: 25%;
+}
+
+
+.login
 {
     background-color: #fff;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));
@@ -44,7 +73,7 @@ body
     margin: -150px 0 0 -230px;
     padding: 30px;
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     z-index: 0;
     -moz-border-radius: 3px;
@@ -99,9 +128,9 @@ h1
     margin: 0 0 30px 0;
     letter-spacing: 4px;
     font: normal 26px/1 Verdana, Helvetica;
-    position: relative;
-}
+    position: center;
 
+}
 
 
 /*--------------------*/
