--- a/car_showroom/cars_project/templates/cars_project/index.html
+++ b/car_showroom/cars_project/templates/cars_project/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-     <meta charset="utf-8">
-    <title>Car list index</title>
-</head>
-{% load staticfiles %}
-<link rel="stylesheet" type="text/css" href="{% static 'cars_project/style.css' %}" />
-<body>
+{% extends 'base.html' %}
+
+{% block body %}
     <header>
         <h1>Car info site</h1>
     </header>
@@ -40,7 +34,5 @@
     {% load staticfiles %}
 
         </table>
-</body>
-</html>
-
+{% endblock %}
 
