some fix, add car_detail page (start)

--- a/car_showroom/cars_project/templates/base.html
+++ b/car_showroom/cars_project/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Login page</title>
+  {% block title %}{% endblock %}
   <link rel="stylesheet" type="text/css" href="{% static 'cars_project/style.css' %}" />
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
