--- a/car_showroom/cars_project/static/cars_project/style.css
+++ b/car_showroom/cars_project/static/cars_project/style.css
@@ -2,6 +2,110 @@ li a {
     color: green;
 }
 
+div.massive-div {
+    width: 100%;
+    height: 100%;
+    border: 2px solid #D9CBCB;
+    background-color: #E8E8E8;
+}
+
+.main div.massive-div {
+    display: inline-block;
+}
+
+.car-id-div {
+    display: inline-block;
+    height: 100%;
+    border: 1px solid #D9CBCB;
+    margin-left: -1px;
+    padding-left: 20px;
+}
+
+div.all-cars-div {
+    display: inline-block;
+    width: 50%;
+    height: 100%;
+    border: 1px solid #D9CBCB;
+    float: left;
+    margin-left: -1px;
+}
+
+div.all-cars-div div {
+    margin-left: -1px;
+    margin-top: -1px;
+    padding-left: 15px;
+}
+
+.car-img-div {
+    display: block;
+    width: 49.8%;
+    float: right;
+}
+
+.car-img-div img {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
+.form-brand-div {
+    height: 80px;
+    width: 100%;
+    height: 6em;
+    line-height: 6em;
+}
+
+.form-brand-div:after {
+    display: block;
+    content: '';
+    clear: both;
+}
+
+.form-brand-value-div {
+    height: 100%;
+    display: block;
+    width: 60%;
+    float: right;
+}
+
+.form-brand-div img {
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+    float: right;
+}
+
+
+.form-price-paint-tires-trim-value-div, .form-paint-value-div {
+    width: 60%;
+    float: right;
+}
+
+.form-sold-div {
+    height: 40px;
+    width: 100%;
+    height: 3em;
+    line-height: 3em;
+}
+
+.form-sold-div:after {
+    display: block;
+    content: '';
+    clear: both;
+}
+
+.form-sold-value-div {
+    height: 100%;
+    width: 60%;
+    float: right;
+}
+
+.form-sold-div img {
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
 div.empty-db-message {
     width: auto;
     background: #9affe8;
@@ -25,7 +129,6 @@ div.formline {
 
 .main div {
    display: block;
-/*   border: 1px solid black; */
 }
 
 font.error-style {
@@ -33,7 +136,6 @@ font.error-style {
     font-size: 22px;
     font-family: Tahoma;
 }
-
 
 html, body
 {
@@ -57,7 +159,6 @@ body
     height: 630px;
     top: 25%;
 }
-
 
 .login
 {
