--- a/car_showroom/cars_project/static/cars_project/style.css
+++ b/car_showroom/cars_project/static/cars_project/style.css
@@ -43,16 +43,17 @@ div.all-cars-div div {
 }
 
 .car-img-div img {
-    width: 100%;
+    width: 99%;
     display: block;
     margin: 0 auto;
+    border: 1px solid navy;
 }
 
 .form-brand-div {
     height: 80px;
-    width: 100%;
     height: 6em;
     line-height: 6em;
+    padding-top: 5px;
 }
 
 .form-brand-div:after {
@@ -73,10 +74,16 @@ div.all-cars-div div {
     display: block;
     margin: 0 auto;
     float: right;
+    box-shadow: 0 0 7px rgba(0,0,0,0.5);
 }
 
+.form-paint-value-div {
+    width: 25%;
+    float: right;
+    padding-right: 20%;
+}
 
-.form-price-paint-tires-trim-value-div, .form-paint-value-div {
+.form-price-paint-tires-trim-value-div {
     width: 60%;
     float: right;
 }
