--- a/car_showroom/cars_project/templates/cars_project/car_form.html
+++ b/car_showroom/cars_project/templates/cars_project/car_form.html
@@ -7,12 +7,14 @@
 {% endblock %}
 
 {% block body %}
-
-    <form method="POST">
+    <div>
+    <form enctype="multipart/form-data" method="POST">
+        <fieldset>
         {% csrf_token %}
         {{ car_form.as_ul }}
         {{ car_form_attributes.as_ul }}
+        </fieldset>
         <button type="submit">Save</button>
     </form>
-
+    </div>
 {% endblock %}
