--- a/car_showroom/cars_project/templates/cars_project/car_detail.html
+++ b/car_showroom/cars_project/templates/cars_project/car_detail.html
@@ -8,6 +8,8 @@
 
 {% block script %}
 <script src="{% static 'cars_project/js/gethexcolor.js' %}"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script type="text/javascript" src="{% static 'cars_project/js/jquery.magnifier.js' %}"></script>
 {% endblock %}
 
 {% block body %}
@@ -21,7 +23,7 @@
             <span> {{ car.uid }} </span>
         </div>
         <div class="car-img-div">
-            <img src="{{ car.car_img.url }}" >
+            <img src="{{ car.car_img.url }}" class="magnify">
 
         </div>
         <div class="all-cars-div">
