--- a/car_showroom/cars_project/templates/base.html
+++ b/car_showroom/cars_project/templates/base.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   {% block title %}{% endblock %}
   <link rel="stylesheet" type="text/css" href="{% static 'cars_project/style.css' %}" />
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
   {% block links %}{% endblock %}
   {% block script %}{% endblock %}
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
