add middleware, add RequestInfo model, make migrations

--- a/car_showroom/cars_project/templates/cars_project/index.html
+++ b/car_showroom/cars_project/templates/cars_project/index.html
@@ -40,5 +40,10 @@
     {% load staticfiles %}
 
         </table>
+        <form action="{% url 'car_form' %}">
+            <button type="submit">Create car</button>
+        </form>
+
 {% endblock %}
+
 
