--- a/car_showroom/cars_project/templates/base.html
+++ b/car_showroom/cars_project/templates/base.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'cars_project/style.css' %}" />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   {% block links %}{% endblock %}
   {% block script %}{% endblock %}
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
