sell car branch

--- a/car_showroom/cars_project/templates/cars_project/index.html
+++ b/car_showroom/cars_project/templates/cars_project/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript">
     $(document).ready(function() {
     $("#sort_table").tablesorter({sortList: [[0,0]]});
+    $("#buttonClass").click(function(){getValueUsingClass();});
     });
 </script>
 {% endblock %}
@@ -42,7 +43,11 @@
                     <td>{{ car.attributes.paint }}</td>
                     <td>{{ car.attributes.tires }}</td>
                     <td>{{ car.attributes.trim }}</td>
-                    <td>{{ car.sold }}</td>
+                    <td>{{ car.sold }}
+                    {% if not car.sold %}
+                    <input type="checkbox" value="{{ car.id }}" name="sold" class="chk" id="id_sold">
+                    {% endif %}
+                    </td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -57,7 +62,39 @@
         <form action="{% url 'car_form' %}">
             <button type="submit">Create car</button>
         </form>
+        <form method="POST">
+            {% csrf_token %}
+            <button type="sumbit" id="buttonClass" class="buttonClass" >Sell Car</button>
+        </form>
 
 {% endblock %}
+{% block pagescript %}
+<script type="text/javascript">
+function getValueUsingClass(){
+    /* declare an checkbox array */
+    var chkArray = [];
+
+    /* look for all checkboes that have a class 'chk' attached to it and check if it was checked */
+    $(".chk:checked").each(function() {
+        chkArray.push($(this).val());
+    });
+
+    /* we join the array separated by the comma */
+    var selected;
+    selected = chkArray.join(',') ;
+
+    /* check if there is selected checkboxes, by default the length is 1 as it contains one single comma */
+    if(selected.length > 0){
+        alert("You have selected " + selected);
+    }else{
+        alert("Please at least check one of the checkbox");
+    }
+    $.post("/", { selected });
+
+}
+</script>
+
+{% endblock %}
+
 
 
